@@ -1,14 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST Osi-0.106.5.tgz 7490303 SHA256 5d35eb509353e755388b3646b2fccc27b45b76a6cd6939d21fe9ffb7075e6b7e SHA512 7ae6208cb9c209be42044ecf4147dd3610c70dc8714945ecef053ec969355e7ff599764fce502ef193e42095a38937af8ef66155d576e19e7ad4ba35849b1817 WHIRLPOOL bf551aa8eb9dbbf664b02e95f388f6dd0183a7136d81fac81cc664f36106a748ce6271bb2057d8847359cfa337114e85d083751ee7f884c017922d3be5afc295
-EBUILD coinor-osi-0.106.5.ebuild 1460 SHA256 aa2f674b83849b76874f5ab9d47868f5f23622b3b006d4405d7f948f7c2252a5 SHA512 300d8d357ea9633058b63d9ba0f579b76d36cbdcffb837470181fc6db9b0848ba18a6317f623ef64252fb4d96ada84342cd3bc88f233c38bbf09110f763c57cc WHIRLPOOL b48bfc3d7931e8efc4a991204bf578d6e45fd19f726b0bb83aaf7032e35e52725f0022bfde6d2a4f5836847c2367676271a4f3bd420d6330c55395249f6ee833
-MISC ChangeLog 1415 SHA256 0dbf5099aa81941c7fcc0d25ab5b35633622f6f5ef68d04678307e389a33a042 SHA512 727d363cfe447f6d7ab309e97a2a24047337581ecfa714eb730adacad42da71fc87f96606207092399f3535c9c1e9df1ae9a8b3f6133f430fb4cd337c0493a42 WHIRLPOOL e2e6a952617cb56b788d7626059a4bcb4ecbd44c1b89a8f4dc667c3caf46907d2cfe689724603c0801699c0d6a33b6107267a816cc1ce8a633b854b4f81f3720
+DIST Osi-0.106.6.tgz 7490371 SHA256 aefa3cab599048ed32002d4e5d3bf1a78fd9a48b36a754ca6896d13a65816ec4 SHA512 25d2dd1791b73329fa9bc32f7b4a4f3d0600ce600868bd14d902dd0ea1c6f5a2eca4bff01ac65ea2843e725fd5c218fca6def9d6974e6af9692c47973b6202ef WHIRLPOOL 3a2aa197f11ef48e347e1d730a02b0d9bfa5dce5f804af531a1c612fd786f9c8d3e7cfec37e1bbb395a30f087fd2eb1128572f2460047666f6fcdd4adcb8bfc2
+EBUILD coinor-osi-0.106.6.ebuild 1672 SHA256 dfeb9aba28f022241cd6f852f249113b25602bafe7b040817132bf671606cae7 SHA512 1dd9f0a7a1d328a3370f81de780df9fe167d81d5d03ce5d003fcef4ec77e750e4a9ee5db1935e500ffe464af5978a0192e257561442f9b356e6cbc3ce61ecab3 WHIRLPOOL 4c27ee925184ee3f1eaa5b5b9c48930d80ba2f39ff33332a891fd1ef7ac16f6e37953d67d2f452b5406a8b887d1f87104a6cc3ff59d64db0374f1b9823ce1bee
+MISC ChangeLog 1601 SHA256 d5b76a945abc6757daa446b3288f91a7504a2d721406594c8398fa3793b10d56 SHA512 6a4a1f88ea3fb4b3b1cb8ed9408afe500c14730de71256d93cd07c28811fefbe8343840581c7f9b481b841c69a9ddce3d693dd5014b3568822c15965e48cda9c WHIRLPOOL 1a1ac2cee950545372c16cc1382efbae696cb1d49462908168d583b5545c04ac620118e83c8e2915405e39216a68089a21dc619d265961b824cffa5032894aa5
 MISC metadata.xml 569 SHA256 73346c2edf59fccd30e14e35fd6caf85754a54cb5ae9a9a2381dbe5db4d7fc92 SHA512 4ce2b8965df03f0f26a10c22404f0d5f4f4f6af133b0516cb0e69d36e41a2396ffad065a56e36842eb20fb8bf171f5d70555ff1cfe7b7ff573cd8fab95e8cfc1 WHIRLPOOL ce5df69d0c869e023424b861ab0557d007cdd26da99298fba012dd78ba0c590e4faefff807aa78a8699a05145714079345bd8bc70cc38cf3f8e4e6482a13393a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlLW6t0ACgkQ1ycZbhPLE2C+UwCghhGC6CjDef2utTh0TDi87OW1
-OmwAoIC68CRi9TJqJ2bKrs/FObJVNCbe
-=jVCU
+iEYEAREIAAYFAlLv1kcACgkQ1ycZbhPLE2DqhQCeLt4aaaXkyN0blfaY+v8ARIir
+n6wAni3F10hqpSgaCVvEZFCjdgwdyAMj
+=hIMi
 -----END PGP SIGNATURE-----
