@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/coinor-osi/Attic/coinor-osi-0.106.5.ebuild,v 1.2 2014/01/15 20:09:00 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/coinor-osi/coinor-osi-0.106.6.ebuild,v 1.1 2014/02/03 17:47:46 bicatali Exp $
 
 EAPI=5
 
@@ -27,9 +27,19 @@ DEPEND="${RDEPEND}
 
 S="${WORKDIR}/${MYPN}-${PV}/${MYPN}"
 
+src_prepare() {
+	sed -i \
+		-e "s:lib/pkgconfig:$(get_libdir)/pkgconfig:g" \
+		configure || die
+	autotools-utils_src_prepare
+}
+
 src_configure() {
+	# needed for the --with-coin-instdir
+	dodir /usr
 	local myeconfargs=(
 		--enable-dependency-linking
+		--with-coin-instdir="${ED}"/usr
 		$(use_with doc dot)
 	)
 	if use glpk; then
