@@ -1,6 +1,12 @@
 # ChangeLog for sci-libs/coinor-osi
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/coinor-osi/ChangeLog,v 1.2 2014/01/15 20:09:00 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/coinor-osi/ChangeLog,v 1.3 2014/02/03 17:47:47 bicatali Exp $
+
+*coinor-osi-0.106.6 (03 Feb 2014)
+
+  03 Feb 2014; Sébastien Fabbro <bicatali@gentoo.org>
+  +coinor-osi-0.106.6.ebuild, -coinor-osi-0.106.5.ebuild:
+  Version bump and fixed bug #499694
 
   14 Jan 2014; Sébastien Fabbro <bicatali@gentoo.org>
   coinor-osi-0.106.5.ebuild:
